# mcopti

./: Cargo.toml  LICENSE  README.md
benches/: barriers_bench.rs  scenario_bench.rs  simulator_bench.rs
examples/: getting_started.rs
queries/: spread_query.sql
src/: backtest.rs  config.rs  context.rs  entry_barriers.rs  historical_volatility.rs  leg.rs  leg_universe.rs  lib.rs  market_calendar.rs  market_data.rs  open_position.rs  option_chain.rs  option_chain_db.rs  option_chain_finnhub.rs  option_math.rs  options_math.rs  pchip.rs  position.rs  raw_option_chain.rs  scenario.rs  serde_helpers.rs  simulator.rs  spread_screener.rs  vol_dynamics.rs  volsurface.rs
tests/fixtures/: ARM_option_chain_20250908_160038.json  market_data_1d.db  scenario_reference.json
