[package]
name = "mcopti"
version = "0.1.0"
edition = "2024"

[dependencies]
# date handling
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
chrono-tz = "0.10.4"
# market data storage
rusqlite = { version = "0.37.0", features = ["bundled"] }
# json parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# random numbers
rand = "0.9.2"
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"

[dev-dependencies]
tempfile = "3"
